--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/NavMenu.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/NavMenu.razor
@@ -1,30 +1,38 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">FFXIVLazyStore</a>
-    </div>
-</div>
+﻿@using System.Globalization
+@inject HttpClient httpClient
+@inject NavigationManager navigationManager
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<RadzenStack AlignItems="AlignItems.Center" class="rz-p-12">
+    <RadzenPanelMenu Style="width:300px">
+        <RadzenPanelMenuItem Text="Home" Icon="Home"></RadzenPanelMenuItem>
+        <RadzenPanelMenuItem Text="LazyShop" Icon="shopping_bag">
+            @if (categoryVM != null)
+            {
+                @foreach (var item in categoryVM.categories)
+                {
+                    <RadzenPanelMenuItem Text="@item.name" Path="@($"LazyShop/{item.id}")">
+                        @foreach (var subItem in item.subCategories)
+                        {
+                            <RadzenPanelMenuItem Style="margin-left:10px;" Text="@subItem.name" Path="@($"LazyShop/{item.id}/{subItem.id}")"></RadzenPanelMenuItem>
+                        }
+                    </RadzenPanelMenuItem>
+                }
+            }
+        </RadzenPanelMenuItem>
+    </RadzenPanelMenu>
+</RadzenStack>
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+@code {
+    private CategoryVM? categoryVM { get; set; }
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+    protected override async Task OnInitializedAsync()
+    {
+        var requestUri = $"https://api.store.finalfantasyxiv.com/ffxivcatalog/api/categories?lang={CultureInfo.CurrentCulture.Name}";
+        var result = await httpClient.GetFromJsonAsync<CategoryVM>(requestUri);
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
+        if (result != null)
+        {
+            this.categoryVM = result;
+        }
+    }
+}
