--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/_Imports.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/_Imports.razor
@@ -8,6 +8,10 @@
 @using Microsoft.JSInterop
 @using FFXIVLazyStore
 @using FFXIVLazyStore.Components
+@using FFXIVLazyStore.Components.Shared
 @using Radzen
 @using Radzen.Blazor
 @using FFXIVLazyStore.Model
+@using Core.Model
+@using FFXIVLazyStore.Components.Layout
+@using Microsoft.AspNetCore.Components.Authorization
