--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/App.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/App.razor
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <Routes @rendermode="InteractiveServer" />
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
