--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/MainLayout.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/MainLayout.razor
@@ -1,20 +1,50 @@
 ﻿@inherits LayoutComponentBase
 
+@* <AuthorizeView>
+    <Authorized>
+        <RadzenLayout Style="grid-template-areas: 'rz-sidebar rz-header' 'rz-sidebar rz-body'">
+            <RadzenHeader>
+                <RadzenRow AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Start">
+                    <RadzenColumn Size="9">
+                        <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
+                    </RadzenColumn>
+                    <RadzenColumn Size="1">
+                        @context.User.Identity?.Name!
+                    </RadzenColumn>
+                    <RadzenColumn Size="2">
+                        <CultureSelector />
+                    </RadzenColumn>
+                </RadzenRow>
+            </RadzenHeader>
+            <RadzenSidebar @bind-Expanded="@sidebarExpanded">
+                   <NavMenu />
+            </RadzenSidebar>
+            <RadzenBody id="scrollableContent">
+                <div class="rz-p-4">
+                    @Body
+                </div>
+            </RadzenBody>
+        </RadzenLayout>
+    </Authorized>
+    <NotAuthorized>
+         <RedirectToLogin/>
+    </NotAuthorized>
+</AuthorizeView>
+ *@
+
 <RadzenLayout Style="grid-template-areas: 'rz-sidebar rz-header' 'rz-sidebar rz-body'">
     <RadzenHeader>
-        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
-            <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
-            <RadzenLabel Text="Header" />
-        </RadzenStack>
+        <RadzenRow AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Start">
+            <RadzenColumn Size="10">
+                <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
+            </RadzenColumn>
+            <RadzenColumn Size="2">
+                <CultureSelector />
+            </RadzenColumn>
+        </RadzenRow>
     </RadzenHeader>
     <RadzenSidebar @bind-Expanded="@sidebarExpanded">
-        <RadzenPanelMenu>
-            <RadzenPanelMenuItem Text="Home" Icon="home" />
-            <RadzenPanelMenuItem Text="Users" Icon="account_box" />
-        </RadzenPanelMenu>
-        <div class="rz-p-4">
-            Sidebar
-        </div>
+        <NavMenu />
     </RadzenSidebar>
     <RadzenBody id="scrollableContent">
         <div class="rz-p-4">
