add product detail

--- a/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/MainLayout.razor
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Components/Layout/MainLayout.razor
@@ -53,6 +53,8 @@
     </RadzenBody>
 </RadzenLayout>
 
+<RadzenComponents @rendermode="InteractiveAuto" />
+
 @code {
     bool sidebarExpanded = true;
 }
